# tv-show-recommender

./: .gitignore  README.md  pyproject.toml
data/: aggregate_ratings.py  data.py  get_show_ids.py  join_ratings_with_show_metadata.py
data/ratings/ratings/: items.py  middlewares.py  pipelines.py  settings.py
data/ratings/ratings/spiders/: ratings_spider.py
scripts/: scrape_data.py
src/: data.py
tv_show_recommender/: __init__.py  data.py  pipelines.py  predictors.py  transformers.py
tv_show_recommender/data/: README.md  functions.py
tv_show_recommender/notebooks/: exploration.ipynb  nearest_neighbor_exploration.ipynb  nearest_neighbor_pipeline.ipynb
