[tool.poetry]
name = "tv-show-recommender"
version = "0.1.0"
description = ""
authors = ["Mavrick Laakso <laakso.mavrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

