[tool.poetry]
name = "tv_show_recommender"
version = "0.1.0"
description = ""
authors = ["Mavrick Laakso <laakso.mavrick@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
scrape-data = "scripts.scrape_data:start"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

