[tool.poetry]
name = "tv_show_recommender"
version = "0.1.0"
description = ""
authors = ["Mavrick Laakso <laakso.mavrick@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
get-show-ids = "data.get_show_ids:start"
aggregate-ratings = "data.aggregate_ratings:start"
join-ratings-with-show-metadata = "data.join_ratings_with_show_metadata:start"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
scrapy = "^2.11.0"
pandas = "^2.1.3"
selenium = "^4.15.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

